[tool.poetry]
name = "transaction"
version = "0.1.0"
description = ""
authors = ["Pavel Gornostaev <pavelgornostaeff@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
